Poc/kubernetes/overlays/dev/ns-echo/echo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo
  namespace: ns-echo
spec:
  replicas: 1
  selector:
    matchLabels: { app: echo }
  template:
    metadata:
      labels: { app: echo }
    spec:
      containers:
        - name: echo
          image: hashicorp/http-echo
          args: ["-text=hello from idp-poc"]
          ports: [{ containerPort: 5678 }]
