Poc/kubernetes/overlays/dev/ns-echo/echo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo
  namespace: ns-echo
spec:
  selector: { app: echo }
  ports: [{ port: 80, targetPort: 5678 }]
