Poc/kubernetes/overlays/dev/ns-echo/echo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-route
  namespace: ns-echo
spec:
  parentRefs:
    - name: idp-gateway
      namespace: default
  hostnames:
    - "echo.idp.local"
  rules:
    - backendRefs:
        - name: echo
          port: 80
